--- a/src/components/EditClient.css
+++ b/src/components/EditClient.css
@@ -1,29 +1,29 @@
-.client {
-    display: block;
+.editClient {
+    max-width: 500px;
+    margin: auto;
+    padding: 5px;
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
-.client > * {
+.editClient input {
+    width: 75%;
     padding: 5px;
 }
 
-.client .clientData {
-    font-weight: 500;
-}
-
-.btn {
+.editClient .btn {
     width: 75px;
     height: 25px;
     font-weight: 600;
-    margin: 5px 0;
+    margin: 10px 0;
     border: 1px solid black;
     border-radius: 10px;
     background-color: rgb(135, 139, 139);
 }
 
-.btn:hover {
-    background-color: rgb(35, 176, 201);
+
+.editClient .btn:hover {
+    background-color: rgb(28, 161, 34);
     cursor: pointer;
     font-weight: 800;
 }
