--- a/src/views/Client.css
+++ b/src/views/Client.css
@@ -1,22 +1,20 @@
-.client {
-    /* max-width: 500px; */
+.clientGet {
+    max-width: 500px;
     margin: auto;
     padding: 5px;
     border: 1px solid black;
     border-radius: 5px;
 }
 
-.client > * {
+.clientGet > * {
     padding: 5px;
 }
 
-.client .clientData {
-    max-width: 500px;
-    margin: auto;
+.clientGet .clientDataGet {
     font-weight: 500;
 }
 
-.client .clientData .btn {
+.clientGet .clientDataGet .btn {
     width: 75px;
     height: 25px;
     font-weight: 600;
@@ -26,15 +24,15 @@
     background-color: rgb(135, 139, 139);
 }
 
-.client .clientData .btn:hover {
+.clientGet .clientDataGet .btn:hover {
     cursor: pointer;
     font-weight: 800;
 }
 
-.client .clientData .btn-edit:hover {
+.clientGet .clientDataGet .btn-edit:hover {
     background-color: rgb(28, 161, 34);
 }
 
-.client .clientData .btn-delete:hover {
+.clientGet .clientDataGet .btn-delete:hover {
     background-color: rgb(175, 25, 14);
 }
